# OpenSCM

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  distribute.sh
.claude/worktrees/magical-chaplygin-091c03/: .gitignore
.claude/worktrees/magical-chaplygin-091c03/scmclient/: Cargo.toml
.claude/worktrees/magical-chaplygin-091c03/scmclient/package/freebsd/: COMPACT_MANIFEST.template
.claude/worktrees/magical-chaplygin-091c03/scmclient/package/linux/: postinst  postrm
.claude/worktrees/magical-chaplygin-091c03/scmclient/package/windows/: scmclient-service.xml  scmclient.nsi
.claude/worktrees/magical-chaplygin-091c03/scmclient/src/: agent.rs
.claude/worktrees/magical-chaplygin-091c03/scmserver/: Cargo.toml  LICENSE
.claude/worktrees/magical-chaplygin-091c03/scmserver/package/docker/: Dockerfile
.claude/worktrees/magical-chaplygin-091c03/scmserver/package/linux/: postrm  scmserver.service
.claude/worktrees/magical-chaplygin-091c03/scmserver/package/windows/: scmserver-service.xml
.claude/worktrees/magical-chaplygin-091c03/scmserver/src/: auth.rs  dashboard.rs  handlers.rs  main.rs  models.rs  reports.rs  schema.rs
.claude/worktrees/magical-chaplygin-091c03/scmserver/templates/: dashboard.html  policies.html  policies_report.html  reports.html  settings.html  system_groups_edit.html  systems.html  tests.html  users.html
.github/workflows/: build_stable.yml  build_testing.yml  manual_test.yml
client/: Cargo.toml
client/src/: config.rs  main.rs  models.rs
config/: scmclient.yaml  scmserver.yaml
docs/design/: 0.5.0-containers.md  0.5.2-auto-groups.md  0.5.3-auto-groups-perf.md  0.6.0-enrollment-tokens.md  0.6.4-evidence.md  0.7.2-entity-trends.md
scmclient/: Cargo.toml
scmclient/debian/: postinst  postrm  prerm  scmclient.service
scmclient/package/arch/: postinst  postrm  prerm  scmclient.hook  scmclient.install
scmclient/package/darwin/: PackageInfo  io.openscm.scmclient.plist  postinstall  preinstall  preremove
scmclient/package/freebsd/: +MANIFEST  MANIFEST  MANIFEST.template  postinst  postrm  prerm  scmclient.rc
scmclient/package/linux/: postinst  postrm  prerm  scmclient.service
scmclient/package/windows/: install-service.ps1  scmclient-service.xml  scmclient.nsi  scmclient.wxs
scmclient/src/: agent.rs  compliance.rs  config.rs  containers.rs  main.rs  models.rs  runner.rs
scmserver/: Cargo.toml
scmserver/debian/: postinst  postrm  prerm
scmserver/package/arch/: scmserver.hook  scmserver.install
scmserver/package/docker/: Dockerfile  docker-compose.yml
scmserver/package/linux/: postinst  postrm  prerm  scmserver.service
scmserver/package/windows/: scmserver-service.xml  scmserver.nsi  scmserver.wxs  uninstall-service.ps1
scmserver/redhat/: scmclient.service
scmserver/src/: agents.rs  audit.rs  auth.rs  auto_groups.rs  auto_groups_admin.rs  client.rs  config.rs  container_eval.rs  dashboard.rs  db_compat.rs  directories.rs  email.rs  enrollment.rs  errors.rs  groups.rs  handlers.rs  install.rs  lib.rs  main.rs  models.rs  policies.rs  reports.rs  scheduler.rs  schema.rs  settings.rs  systems.rs  tests.rs  users.rs
scmserver/templates/: audit_log.html  auto_groups_add.html  auto_groups_edit.html  base.html  container_detail.html  dashboard.html  directories.html  directories_form.html  enrollment_tokens.html  install.html  login.html  policies.html  policies_add.html  policies_edit.html  policies_report.html  reports.html  reports_diff.html  reports_view.html  scheduler.html  scheduler_add.html  settings.html  system_groups.html  system_groups_add.html  system_groups_edit.html  system_report_view.html  system_reports_diff.html  systems.html  systems_edit.html  systems_report.html  tests.html  tests_add.html  tests_edit.html  users.html  users_add.html  users_edit.html
scmserver/tests/: container_scoring.rs  entity_trends.rs  prune_inactive.rs  run_policy_on_system.rs  schema_migration.rs  templates_parse.rs
server/: Cargo.toml
server/src/: auth.rs  client.rs  config.rs  schema.rs
server/templates/: dashboard.html  policies_edit.html  system_groups_add.html  system_groups_edit.html  systems.html  systems_edit.html  tests.html  users_add.html
