[package]
name = "scmserver"
version = "0.1.6"
edition = "2024"
authors = ["Yariv Hakim <yariv@openscm.io>"]
license = "FSL-1.1-ALv2"
description = "Server for Open Security Compliance Manager"

[dependencies]
cfg-if = "1.0"
axum = { version = "0.8.4", features = ["macros", "json", "tokio"] }
axum-server = "0.7"
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }
tokio = { version = "1.34", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tera = "1.20"
include_dir = "0.7"
toml = "0.8.0"
urlencoding = "2.1"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.6"
base64 = "0.21"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bcrypt = "0.17.0"
time = "0.3"
genpdf = { version = "0.2.0", features = ["images"] }
hkdf = "0.12"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
